--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="intro-text">
             <div class="intro-lead-in">We gettin' married y'all!</div>
             <div class="intro-heading">May 1st, 2019</div>
-            <a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=M29idWJxdGNpZjIxdjlsYXFnNnZrZ3F0c3QganNvbmVzZW5AbQ&tmsrc=jsonesen%40gmail.com" class="btn btn-xl">RSVP</a>
+            <a href="https://goo.gl/forms/WD0ijeySK2Q5UY6A2" class="btn btn-xl">RSVP</a>
         </div>
     </div>
 </header>
