--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
     <header>
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">We gettin" married y"all!</div>
+          <div class="intro-lead-in">We gettin' married y'all!</div>
           <div class="intro-heading">May 1st, 2019</div>
-          <a href="https://goo.gl/forms/WD0ijeySK2Q5UY6A2" class="btn btn-xl"
-            >RSVP</a
+          <a 
+            class="btn btn-xl"
+            href="https://goo.gl/maps/fsDUhAMk2yAzsjEi9"
+            display="inline-block"
+          >
+            GET DIRECTIONS
+          </a
           >
         </div>
       </div>
@@ -127,6 +132,7 @@
             <h3 class="section-subheading text-muted">
               <p>
                 Beacon Rock State Park <br />
+                Hamilton Mountain Upper Picnic Area <br />
                 Skamania, Washington, 98684 <br />
                 Wednesday, May 1st, 2019
               </p>
@@ -144,7 +150,18 @@
               <p>
                 Parking will be reserved and marked accordingly.
               </p>
+              <p>
+                For directions try using google maps by pressing the button
+                below!
+              </p>
             </h3>
+              <a
+                href="https://goo.gl/maps/fsDUhAMk2yAzsjEi9"
+                class="btn-xl"
+                display="inline-block"
+              >
+                 GOOGLE MAPS
+              </a>
           </div>
         </div>
       </div>
@@ -171,9 +188,11 @@
                 <br />
                 <a
                   href="https://www.gofundme.com/the-gomezsonesen-first-family-home-fund"
-                  class="btn btn-xl"
-                  >Gomez-Sonesen Family Home Fund</a
+                  class="btn-xl"
+                  display="inline-block"
                 >
+                  Donate Now <3
+                </a>
               </p>
             </h3>
           </div>
